--- a/app/views/catches/show.html.erb
+++ b/app/views/catches/show.html.erb
@@ -4,8 +4,8 @@
     <section class="catcch_info">
       <div> <span>  <b><%= "Rybár:" %></b> <%= @catch.user.name%> <%= @catch.user.surname %> </span></div>
       <div><span>  <b><%= "Druh ryby:" %></b> <%= @catch.fish.name%>  </span></div>
-      <div><span>  <b><%= "Váha:" %></b> <%= @catch.weight%>  </span></div>
-      <div><span>  <b><%= "Dĺžka:" %></b> <%= @catch.size%>  </span></div>
+      <div><span>  <b><%= "Váha:" %></b> <%= @catch.weight%> kg </span></div>
+      <div><span>  <b><%= "Dĺžka:" %></b> <%= @catch.size%> cm </span></div>
       <div><span>  <b><%= "Revír:" %></b> <%= @catch.area.name%>  </span></div>
       <div><span>  <b><%= "Návnada:" %></b> <%= @catch.bait.name%>  </span></div>
       <div><span>  <b><%= "Spôsob lovu:" %></b> <%= @catch.methodf.name%>  </span></div>
