--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -1,5 +1,27 @@
 <html>
 
+
+<div class='container'>
+  <div class='row'>
+    <div class='col-xs-6' align="center">
+      <h2>Pozri si informácie o druhu ryby</h2>
+    </div>
+    <div class='col-xs-6' align="center">
+      <h2>Hľadaj revír podľa kraja, organizácie alebo mena</h2>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-xs-6' align="center" >
+      <%= link_to 'Pokračuj tu', fishes_path, class: "btn btn-primary"%>
+    </div>
+    <div class='col-xs-6' align="center">
+      <%= link_to 'Pokračuj tu', areas_path, class: "btn btn-primary"%>
+    </div>
+    <hr/>
+  </div>
+</div>
+
+
   <div class='container'>
     <h3>
       Táto webová aplikácia bola vytvorená, aby pomohla rybárom vybrať si správny revír, návnadu alebo spôsob lovu na ulovenie daného druhu ryby.  Na to, aby sme poskytovali relevantné informácie potrebujeme aj tvoju pomoc. Tak neváhaj a pridaj svoj úlovok!
@@ -26,7 +48,7 @@
             <th>Počet úlovkov</th>
 
 
-            <% @population_on_acre.each do |place| %>
+            <% @population.each do |place| %>
           <tr>
             <td> <%=place['name'] %> </td>
             <td> <%=place['count'] %></td>
@@ -37,6 +59,32 @@
     </body>
     </center>
   </div>
+
+
+<div class='container'>
+  <center>
+    <b>Druh ryby a ich počet evidovaný v našom zázname:</b>
+
+
+    <body>
+    <table style="width:50%">
+      <tr>
+        <th>Druh ryby</th>
+        <th>Počet úlovkov</th>
+
+
+        <% @fishspecies.each do |place| %>
+        <tr>
+          <td> <%=place['name'] %> </td>
+          <td> <%=place['count'] %></td>
+        </tr>
+      <% end %>
+      </tr>
+    </table>
+    </body>
+  </center>
+</div>
+
 
 
 
