--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -63,7 +63,7 @@
 
 <div class='container'>
   <center>
-    <b>Druh ryby a ich počet evidovaný v našom zázname:</b>
+    <b>Druh ryby s počtom evidovaných úlovkov :</b>
 
 
     <body>
