--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'Edit user') %>
-<% provide(:button_text, 'Save changes') %>
+<% provide(:button_text, 'Ulož zmeny') %>
 <h1>Uprav svoj profil</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
