pridane oznamenie do searchu ak nic nenajde + par drobnosti, upraveny seed

--- a/app/views/layouts/_footer.erb
+++ b/app/views/layouts/_footer.erb
@@ -2,5 +2,6 @@
   <div align="center">
     <p class="text-muted"> Táto stránka bola vytvorená ako školský projekt. Dáta o revíroch boli získané zo stránky kamnaryby.sk a dáta o úlovkoch nagenerované za účelom prezentácie.</p>
     <p class='text-muted'>Kontakt: jurajmecir@gmail.com</p>
+    <p class='text-muted'>Github: https://github.com/JuroMecir/RubyNaKolajach</p>
   </div>
 </footer>
