--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -39,19 +39,20 @@
 
 
 
-<ul class="users" >
-  <% @areas.each do |area| %>
-    <li>
-      <aside class="col-md-10">
-       <b>Názov revíru:</b><%= area.name %> <br>
-         <b>Organizácia: </b><%= area.owner %>
-      </aside>
-      <%= link_to  'Ukáž detaily', area, class: "btn btn-primary" %>
-    </li>
-
-
-  <% end %>
-
-</ul>
+<% if @areas.any? %>
+  <ul class="users" >
+    <% @areas.each do |area| %>
+      <li>
+        <aside class="col-md-10">
+         <b>Názov revíru:</b><%= area.name %> <br>
+          <b>Organizácia: </b><%= area.owner %>
+        </aside>
+        <%= link_to  'Ukáž detaily', area, class: "btn btn-primary" %>
+      </li>
+    <% end %>
+  </ul>
+<% else %>
+  <h2>Vyhľadávanému výrazu nezodpovedá žiadny záznam v databáze.</h2>
+<% end %>
 
 <%= will_paginate %>
