--- a/app/views/fisherman_friend/home.html.erb
+++ b/app/views/fisherman_friend/home.html.erb
@@ -7,7 +7,7 @@
       <h2>Pozri si informácie o druhu ryby</h2>
     </div>
     <div class='col-xs-6' align="center">
-      <h2>Hľadaj revír podľa kraja, organizácie alebo mena</h2>
+      <h2>Hľadaj revír podľa  organizácie alebo mena</h2>
     </div>
   </div>
   <div class='row'>
